--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,14 @@
 .svn/
 migrate_working_dir/
 
+# Generated files
+*.g.dart
+*.freezed.dart
+*.gr.dart
+*.config.dart
+*.inject.summary
+*.inject.dart
+
 # IntelliJ related
 *.iml
 *.ipr
