--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,21 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_bloc: ^9.1.1
+  get_it: ^8.2.0
+  injectable: ^2.5.1
+  dio: ^5.9.0
+  retrofit: ^4.5.0
+  json_annotation: ^4.9.0
+  freezed: ^2.5.7
+  equatable: ^2.0.7
+  dartz: ^0.10.1
+  flutter_secure_storage: ^9.2.4
+  cached_network_image: ^3.4.1
+  dio_cache_interceptor: ^4.0.3
+  logger: ^2.6.0
+  connectivity_plus: ^6.1.5
+  freezed_annotation: ^2.4.4
 
 dev_dependencies:
   flutter_test:
@@ -46,6 +61,13 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+  build_runner: ^2.4.13
+  retrofit_generator: ^9.1.5
+  injectable_generator: ^2.6.2
+  json_serializable: ^6.9.0
+  mocktail: ^1.0.4
+  very_good_analysis: ^7.0.0
+  import_sorter: ^4.6.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
