--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   logger: ^2.6.0
   connectivity_plus: ^6.1.5
   freezed_annotation: ^2.4.4
+  go_router: ^15.1.2
 
 dev_dependencies:
   flutter_test:
