--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -20,20 +20,54 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId = "com.example.flutter_template"
-        // You can update the following values to match your application needs.
-        // For more information, see: https://flutter.dev/to/review-gradle-config.
         minSdk = flutter.minSdkVersion
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
     }
 
+    flavorDimensions = ["environment"]
+    
+    productFlavors {
+        development {
+            dimension "environment"
+            applicationIdSuffix ".dev"
+            versionNameSuffix "-dev"
+            resValue "string", "app_name", "Flutter Template Dev"
+            buildConfigField "String", "FLAVOR", '"development"'
+            buildConfigField "String", "BASE_URL", '"https://dev-api.flutter-template.com"'
+        }
+        
+        staging {
+            dimension "environment"
+            applicationIdSuffix ".staging"
+            versionNameSuffix "-staging"
+            resValue "string", "app_name", "Flutter Template Staging"
+            buildConfigField "String", "FLAVOR", '"staging"'
+            buildConfigField "String", "BASE_URL", '"https://staging-api.flutter-template.com"'
+        }
+        
+        production {
+            dimension "environment"
+            resValue "string", "app_name", "Flutter Template"
+            buildConfigField "String", "FLAVOR", '"production"'
+            buildConfigField "String", "BASE_URL", '"https://api.flutter-template.com"'
+        }
+    }
+
     buildTypes {
+        debug {
+            debuggable true
+            minifyEnabled false
+            shrinkResources false
+        }
+        
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
+            debuggable false
+            minifyEnabled true
+            shrinkResources true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             signingConfig = signingConfigs.debug
         }
     }
