config: disable import_sorter comments
- Remove import_sorter.yaml file
- Configure import_sorter in pubspec.yaml with comments: false
- Prevents auto-adding '// Project imports:' and '// Package imports:' comments

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -114,3 +114,7 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+# Import Sorter Configuration
+import_sorter:
+  comments: false
